# WordsCount

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  File.h  Parser.cpp  Parser.h  main.cpp
src/unix/: File.cpp
src/win32/: File.cpp
tst/: CMakeLists.txt  ParserTest.cpp
